--- a/style.css
+++ b/style.css
@@ -72,7 +72,6 @@ h1 {
   text-decoration: none;
 }
 
-
 .section_1 h2 {
   color: #48555b;
   text-align: center;
@@ -81,10 +80,10 @@ h1 {
   letter-spacing: 2.306px;
   margin-bottom: 11px;
 }
-.line{
+.line {
   margin-bottom: 85px;
   width: 50px;
-  background-color: #00A4E5;
+  background-color: #00a4e5;
   margin-inline: auto;
   height: 3px;
 }
@@ -163,10 +162,10 @@ hr {
   justify-content: space-between;
   flex-wrap: wrap;
 }
-.line_2{
+.line_2 {
   margin-bottom: 78px;
   width: 50px;
-  background-color: #00A4E5;
+  background-color: #00a4e5;
   height: 3px;
 }
 .sec_2_top2 {
@@ -176,6 +175,7 @@ hr {
   max-width: 586px;
   width: 100%;
   gap: 31px;
+  margin-bottom: 20px;
 }
 .sec_2_top2 p {
   color: #48555b;
@@ -202,7 +202,6 @@ article {
   gap: 18px;
   max-width: 290px;
   width: 100%;
-
 }
 article h3 {
   color: #48555b;
@@ -285,9 +284,10 @@ footer p {
 .email {
   max-width: 250px;
   width: 100%;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding-top: 9.5px;
+  padding-bottom: 9.5px;
   padding-left: 16px;
+  padding-right: 16px;
 }
 
 .last_p {
