--- a/style.css
+++ b/style.css
@@ -1,328 +1,257 @@
-html {
-  scroll-behavior: smooth;
-}
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Open Sans";
+  font-family: "Poppins";
 }
-.top {
-  height: 100vh;
+body {
+  background: linear-gradient(
+    80deg,
+    #292929 -2.93%,
+    rgba(255, 255, 255, 0) 212.44%
+  );
+  padding-left: 20px;
+  padding-right: 20px;
+}
+header {
+  padding-top: 60px;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  padding-top: 40px;
-  padding-bottom: 71px;
-}
-.top_section img {
-  margin: 0 auto;
-  display: block;
-}
-h1 {
-  color: #fff;
-  text-align: center;
-  font-family: "Bebas Neue";
-  font-size: 60px;
-  font-weight: 400;
-  letter-spacing: 5.709px;
-}
-.top_section p {
-  color: #fff;
-  text-align: center;
-  font-size: 16px;
-  font-weight: 700;
-}
-.top_section a {
-  display: block;
-  text-decoration: none;
-  color: #fff;
-  text-align: center;
-  font-size: 11px;
-  font-weight: 700;
-  letter-spacing: 3.7px;
-}
-.container {
-  margin: 0 auto;
-  max-width: 980px;
-  width: 100%;
-  padding: 0 20px;
-}
-.all_nav {
-  display: flex;
-  justify-content: space-between;
-  padding: 24px 0;
-  flex-wrap: wrap;
-  gap: 30px;
-}
-.nav {
-  display: flex;
-  justify-content: space-between;
-  gap: 47px;
-  flex-wrap: wrap;
-}
-.nav a {
-  display: block;
-  color: #48555b;
-  text-align: center;
-  font-size: 12px;
-  font-weight: 700;
-  letter-spacing: 1.091px;
-  text-decoration: none;
-}
-
-.section_1 h2 {
-  color: #48555b;
-  text-align: center;
-  font-size: 18px;
-  font-weight: 700;
-  letter-spacing: 2.306px;
-  margin-bottom: 11px;
-}
-.line {
-  margin-bottom: 85px;
-  width: 50px;
-  background-color: #00a4e5;
-  margin-inline: auto;
-  height: 3px;
-}
-.sec_1_all {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  gap: 30px;
-}
-.sec_1_text_main {
-  color: #48555b;
-  font-size: 20px;
-  font-weight: 700;
-  letter-spacing: 0.188px;
-}
-span {
-  color: #16ace8;
-  font-family: "Open Sans";
-  letter-spacing: 0.17px;
-}
-.sec_1_text {
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
-  max-width: 406px;
-}
-.sec_1_cards {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  max-width: 460px;
-  width: 100%;
+  /* justify-content: space-between; */
   gap: 20px;
+  justify-content: space-around;
+  
 }
-.sec_1_text_second {
-  color: #48555b;
-  font-size: 13px;
-  font-weight: 400;
-  line-height: 23px;
-  letter-spacing: 0.188px;
+form {
+  max-width: 803px;
+  width: 100%;
 }
-
-.p_card {
-  color: #fff;
-  font-size: 24px;
-  font-weight: 700;
-  line-height: 29px;
-  letter-spacing: 0.188px;
-  display: block;
-  position: absolute;
-  top: 18px;
-  left: 18px;
-  z-index: 10;
-}
-.card_img {
-  position: relative;
-}
-
-.hr {
-  margin-bottom: 48px;
-}
-hr {
-  opacity: 30%;
-}
-.section_1 {
-  padding-bottom: 128px;
-}
-.section_2 h2 {
-  color: #48555b;
+input {
+  padding-left: 30px;
+  height: 62px;
+  border-radius: 40px;
+  border: 1px solid #000;
+  background: #d9d9d9;
+  box-shadow: 0px 4px 40px 0px rgba(0, 0, 0, 0.25);
+  color: #292929;
   font-size: 18px;
-  font-weight: 700;
-  letter-spacing: 2.306px;
-  margin-bottom: 11px;
-}
-.sec_2_top {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
-.line_2 {
-  margin-bottom: 78px;
-  width: 50px;
-  background-color: #00a4e5;
-  height: 3px;
-}
-.sec_2_top2 {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  max-width: 586px;
-  width: 100%;
-  gap: 31px;
-  margin-bottom: 20px;
-}
-.sec_2_top2 p {
-  color: #48555b;
-  font-size: 11px;
   font-weight: 400;
-  line-height: 19px;
-  letter-spacing: 0.2px;
-  max-width: 405px;
+  max-width: 803px;
   width: 100%;
 }
-
-.sec_2_cards {
-  display: flex;
-  justify-content: space-between;
-  gap: 28px;
-  flex-wrap: wrap;
-}
-article {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  padding: 38px 22px 39px 23px;
-  border: gainsboro 2px solid;
-  gap: 18px;
-  max-width: 290px;
+.header__button {
+  max-width: 292px;
   width: 100%;
-  margin: 0 auto;
-}
-article h3 {
-  color: #48555b;
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 24px;
-  letter-spacing: 0.427px;
-}
-article p {
-  color: #48555b;
-  font-size: 13px;
-  font-weight: 400;
-  line-height: 23px;
-  letter-spacing: 0.188px;
-}
-.section_2 {
-  padding-bottom: 115px;
-}
-.section_3 {
-  padding-top: 120px;
-  padding-bottom: 231px;
-}
-.section_3 h2 {
-  color: #48555b;
-  text-align: center;
-  font-size: 30px;
-  font-weight: 700;
-  line-height: 36px;
-  letter-spacing: 0.15px;
-  margin-bottom: 35px;
-}
-
-.bg {
-  background-image: url(bg.jpg);
-  background-position: bottom;
-   background-size: cover;
-
-}
-.bg1 {
-  background-image: url(./mainpic.jpg);
-  background-position: center;
-   background-size: cover;
-}
-footer {
-  background-color: #171819;
-  padding-top: 30px;
-  margin-top: -2px;
-}
-footer p {
-  color: #fff;
+  height: 62px;
+  border-radius: 40px;
+  border: none;
+  background: #4cbb17;
+  box-shadow: 0px 4px 40px 0px rgba(0, 0, 0, 0.25);
+  color: rgba(255, 255, 255, 0.8);
   text-align: center;
   font-size: 22px;
-  font-weight: 700;
-  letter-spacing: 0.846px;
-}
-.footer {
+  font-weight: 800;
   display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  gap: 20px;
-}
-.input {
-  max-width: 400px;
-  width: 100%;
-  display: flex;
+  justify-content: center;
   align-items: center;
 }
-.button {
-  width: 150px;
-  height: 40px;
-  color: #fff;
-  text-align: center;
-  font-size: 13px;
-  font-weight: 700;
-  letter-spacing: 0.5px;
-  background: #00a4e5;
-  border: none;
-  margin: 0 auto;
-  display: block;
-  transition: 0.4s;
+.top {
+  padding-top: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 50px;
+  justify-content: center;
 }
-.email {
-  max-width: 250px;
+.time {
+  max-width: 510px;
   width: 100%;
-  padding-top: 9.5px;
-  padding-bottom: 9.5px;
-  padding-left: 16px;
-  padding-right: 16px;
+  border-radius: 30px;
+  background: #d9d9d9;
+  box-shadow: 10px 10px 4px 0px rgba(0, 0, 0, 0.5);
 }
-
-.last_p {
-  color: #fff;
-  font-size: 11px;
+h2 {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  text-align: center;
+  color: #292929;
+  font-size: 36px;
+  font-weight: 700;
+}
+.p_time {
+  color: #292929;
+  font-size: 96px;
+  font-weight: 700;
+  text-align: center;
+}
+.p_date {
+  color: #292929;
+  font-size: 20px;
   font-weight: 400;
-  letter-spacing: 0.846px;
-  padding-top: 51px;
-  padding-bottom: 23px;
+  text-align: center;
+  padding-bottom: 15px;
 }
-.nav a:hover {
-  color: #00a4e5;
+.weather {
+  display: flex;
+  justify-content: center;
+  max-width: 780px;
+  width: 100%;
+  border-radius: 30px;
+  background: #d9d9d9;
+  box-shadow: 10px 10px 4px 0px rgba(0, 0, 0, 0.5);
+  flex-wrap: wrap;
 }
-.nav a {
-  transition: 0.4s;
+.bottom {
+  padding-top: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 50px;
+  justify-content: center;
+  padding-bottom: 50px;
+}
+.week {
+  padding: 10px 25px;
+  max-width: 414px;
+  width: 100%;
+  border-radius: 30px;
+  background: #d9d9d9;
+  box-shadow: 10px 10px 4px 0px rgba(0, 0, 0, 0.5);
+}
+.wind {
+  padding: 15px 40px;
+  max-width: 870px;
+  width: 100%;
+  border-radius: 30px;
+  background: #d9d9d9;
+  box-shadow: 10px 10px 4px 0px rgba(0, 0, 0, 0.5);
 }
 
-.button:hover {
-  outline: #00a4e5 2px solid;
-  cursor: pointer;
-  background-color: white;
-  color: #00a4e5;
+.weather_left {
+  padding: 30px;
 }
-.scroll:hover {
-  color: #00a4e5;
+.mainTemp {
+  color: #292929;
+  font-size: 80px;
+  font-weight: 700;
+  line-height: 65px;
 }
-.scroll {
-  transition: 0.4s;
+.feel {
+  color: #292929;
+  font-size: 20px;
+  font-weight: 600;
 }
-@media (max-width: 450px) {
-  .card_img {
-    margin-top: 35px;
+.like {
+  color: #292929;
+  font-size: 32px;
+  font-weight: 600;
+}
+.feel_like {
+  display: flex;
+  align-items: center;
+  gap: 9px;
+  padding-bottom: 30px;
+}
+.sun {
+  display: flex;
+  flex-direction: column;
+}
+.sun_card {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.sun_card img {
+  width: 48px;
+  height: 48px;
+}
+.sun_text {
+  color: #292929;
+  font-size: 20px;
+  font-weight: 700;
+}
+.weather_center {
+  display: flex;
+  flex-direction: column;
+  color: #292929;
+  text-align: center;
+  font-size: 32px;
+  font-weight: 700;
+}
+.weather_right {
+  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 25px;
+  padding: 25px;
+  width: 247px;
+  align-items: center;
+}
+
+.week_title {
+  text-align: center;
+  color: #292929;
+  text-align: center;
+  font-size: 32px;
+  font-weight: 700;
+}
+
+.one_day {
+  display: flex;
+  gap: 30px;
+  align-items: center;
+  color: #292929;
+  font-size: 20px;
+  font-weight: 700;
+}
+.wind_cards {
+  display: flex;
+  gap: 15px;
+  justify-content: center;
+  flex-wrap: wrap;
+  color: #292929;
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.wind_article_bottom {
+  padding: 15px;
+  max-width: 130px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 5px;
+  border-radius: 40px;
+  background: linear-gradient(
+    171deg,
+    #f88508 -12.41%,
+    rgba(246, 250, 217, 0) 163.32%
+  );
+}
+
+.wind_article_bottom_dark {
+  padding: 15px;
+  max-width: 130px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 5px;
+  border-radius: 40px;
+  background: linear-gradient(
+    174deg,
+    #443d64 -15.92%,
+    rgba(101, 130, 198, 0) 192.45%
+  );
+}
+h3 {
+  margin-bottom: 15px;
+  text-align: center;
+  color: #292929;
+  font-size: 32px;
+  font-weight: 700;
+}
+
+@media (max-width: 400px) {
+  .header__button {
+    font-size: 15px;
   }
 }
